# Hailo-rpi5-cplusplus

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
